welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
do {
^Poucet:5: error: ';' expected but ')' found.
    nbBscuits = nbBiscuits + 1)
                              ^Poucet:8: error: ';' expected but 'while' found.
  } while (sortieTrouvee)
    ^Poucet:12: error: 'while' expected but '}' found.
}
^